<?php

namespace App\Repositories;

class MegaplanRepository
{
    /**
     * Create a new class instance.
     */
    public function __construct()
    {
        //
    }
}
